[project]
name = "katz-polar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "networkx>=3.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "miniball>=1.2.0",
    "scipy>=1.14.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/katz_polar"]
